# code-challenge-interlacing

./: .gitignore  NOTES.md  README.md
challenge-plain/: CMakeLists.txt  imagebuffer.cpp  imagebuffer.h  main.cpp  tveffect.cpp  tveffect.h
